--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>speak</title>
+    <title>Navi speak</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <h1>kaalakeya speak</h1>
+    <H1>Navi World</H1>
+    <textarea id="txtInput" placeholder="Type here to convert it to bhaubali speak "></textarea>
+    <button id="btnTranslate"> Translate </button>
 </body>
+
+<div style="font-size: large;">You are a navi now</div>
+<div id="outputTxt"></div>
+<script src="app.js" type="text/javascript"></script>
 
 </html>
