--- a/index.html
+++ b/index.html
@@ -10,13 +10,27 @@
 </head>
 
 <body>
-    <H1>Navi World</H1>
-    <textarea id="txtInput" placeholder="Type here to convert it to bhaubali speak "></textarea>
-    <button id="btnTranslate"> Translate </button>
-</body>
+    <nav>
+        <div style="font-size:3rem">
+            Welcome to Pandora
+        </div>
+    </nav>
+    <main>
+        <textarea id="txtInput" placeholder="Type here to convert it to navi speak "></textarea>
+        <button id="btnTranslate"> Translate to navi </button>
+        <div style="font-size: large;">Translation will come here 👇</div>
+        <div id="outputTxt"></div>
+    </main>
+    <footer>
+        <div style="font-size:x-large;">about</div>
+        <p id="para">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis tenetur exercitationem ipsum ad
+            reprehenderit iure doloremque vero culpa quibusdam numquam dicta reiciendis quidem atque harum accusamus,
+            dolorem eaque labore eveniet?
+        </p>
+    </footer>
+    <script src="app.js" type="text/javascript"></script>
 
-<div style="font-size: large;">You are a navi now</div>
-<div id="outputTxt"></div>
-<script src="app.js" type="text/javascript"></script>
+</body>
 
 </html>
