--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
         <div id="outputTxt"></div>
     </main>
     <footer>
-        <div style="font-size:x-large;">about</div>
-        <p id="para">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis tenetur exercitationem ipsum ad
-            reprehenderit iure doloremque vero culpa quibusdam numquam dicta reiciendis quidem atque harum accusamus,
-            dolorem eaque labore eveniet?
+        <div style="font-size:x-large;">About</div>
+        <p >
+           Are you a fan of avatar movie..!, you are in the right place to learn the navi language enter the word or sentence you need to convert it into navi and hit the translate button voila.! you are in pandora now gear up and find your dragon
         </p>
     </footer>
     <script src="app.js" type="text/javascript"></script>
